# Pamplemousse

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake.yml  release.yml  runcmake.yml
CUTI-master/: CMakeLists.txt
CUTI-master/include/: Cuti.h
CUTI-master/src/: CutiMain.cpp
app/: basicexport.cpp  basicexport.hpp  mainwindow.ui  modeloutput.cpp  modeloutput.hpp  outputslist.cpp  outputslist.h  outputtable.cpp  outputtable.h  pamplemousse.cpp  pamplemousse_ui.cpp  pamplemousse_ui.h  resources.qrc  testrun.cpp  testrun.hpp
common/: analyser.cpp  analyser.hpp  ast.cpp  ast.hpp  conversioncontext.cpp  conversioncontext.hpp  document.cpp  document.hpp  function.cpp  function.hpp  functiondispatch.hpp  pmmldocumentdefs.cpp  pmmldocumentdefs.hpp
luaconverter/: luaconverter-internal.hpp  luaconverter-predicate.cpp  luaconverter-procedural.cpp  luaconverter-ternary.cpp  luaconverter.cpp  luaconverter.hpp  luaoutputter.cpp  luaoutputter.hpp  optimiser.cpp  optimiser.hpp
model/: generalregressionmodel.cpp  generalregressionmodel.hpp  miningmodel.cpp  miningmodel.hpp  naivebayesmodel.cpp  naivebayesmodel.hpp  neuralnetworkmodel.cpp  neuralnetworkmodel.hpp  output.cpp  output.hpp  predicate.cpp  predicate.hpp  regressionmodel.cpp  regressionmodel.hpp  rulesetmodel.cpp  rulesetmodel.hpp  scorecardmodel.cpp  scorecardmodel.hpp  supportvectormachine.cpp  supportvectormachine.hpp  transformation.cpp  transformation.hpp  treemodel.cpp  treemodel.hpp
unit_tests/: MiningModelClassificationFirst.pmml  MiningModelMajority.pmml  MiningModelRegressionAverage.pmml  NaiveBayes.pmml  RuleSetComplex.pmml  RuleSetSimple.pmml  SampleScorcard.pmml  SampleScorecard-Attribute.pmml  SupportVectorBinary.pmml  SupportVectorXor.pmml  TreeMissingValue.pmml  TreeNoTrueChild.pmml  test_function.cpp  test_miningmodel.cpp  test_naivebayes.cpp  test_predicate.cpp  test_ruleset.cpp  test_scorecard.cpp  test_supportvectormachine.cpp  test_transform.cpp  test_tree.cpp  testutils.cpp  testutils.hpp
